external-crates/move/crates/move-compiler/tests/development/enums/hlir/dead_code_guard.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/hlir/dead_code_guard.move:3:17
  │
3 │     public enum Option<T> has drop {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

warning[W09005]: dead or unreachable code
   ┌─ tests/development/enums/hlir/dead_code_guard.move:14:30
   │
14 │             _ if ({return 0; true}) => 1,
   │                              ^^^^ Unreachable code. This statement (and any following statements) will not be executed.
   │
   = This warning can be suppressed with '#[allow(dead_code)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

